[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "deep-translator>=1.11.4",
    "firebase-admin>=6.6.0",
    "folium>=0.18.0",
    "geopy>=2.4.1",
    "python-dateutil>=2.9.0.post0",
    "streamlit>=1.40.2",
    "streamlit-folium>=0.23.2",
    "xds-protos>=1.68.0",
    "yagmail>=0.15.293",
]